--- a/doc/HOWTOs.org
+++ b/doc/HOWTOs.org
@@ -9,19 +9,17 @@
      - [[#enable-navigation-by-visual-lines][Enable navigation by visual lines]]
 
 ** Disable a package completely
-To completely disable a package and effectively uninstalling it even if
-it is part of your used layers, look for the variable
-=dotspacemacs-excluded-packages= in your dotfile and add the package
-name to it:
+当有些包是你不想要的，你想卸载它，你可以通过文件 =~/.spacemacs=中变量 
+=dotspacemacs-excluded-packages= 进行控制（如果有些已安装的layers需要这个包，
+也会被卸载）：
 
 #+begin_src emacs-lisp
   (setq-default dotspacemacs-excluded-packages '(package1 package2 ...))
 #+end_src
 
 ** Disable a package only for a specific major-mode
-This is done by removing the hook added by Spacemacs. For example to
-remove =flycheck= support in python buffers, look for the function
-=dotspacemacs/config= in your dotfile and add the following code:
+你也可以通过=remove-hook=hook在特定mode下禁用特定的包。比如，你想在=python buffers
+下禁用=flycheck=，你可以在=~/.spacemacs=文件中=dotspacemacs/config=函数中进行如下设置：
 
 #+begin_src emacs-lisp
     (remove-hook 'python-mode-hook 'flycheck-mode)
@@ -31,24 +29,22 @@ remove =flycheck= support in python buffers, look for the function
 ~SPC h d v major-mode RET~
 
 ** Disable company for a specific major-mode
-It may be handy to disable =company= for a given mode if you plan on
-configuring =auto-complete= instead. On easy way to do it is to use the
-macro =spacemacs|disable-company= in the function =dotspacemacs/config=
-of your dotfile. The following snippet disables company for
-=python-mode=:
+当你启用了=auto-company=，要想在特定的mode下禁用=company=，可能不太方便。
+=Spacemacs=提供了一种简单的方法：就是在=~/.spacemacs=文件中，在函数=dotspacemacs/config=
+中使用=spacemacs|disable-company=方法。比如，下面这段代码就是在=python-mode=时禁用=company=：
 
 #+begin_src emacs-lisp
     (spacemacs|disable-company python-mode)
 #+end_src
 
 ** Change special buffer rules
-To change the way spacemacs marks buffers as useless, you can customize
-=spacemacs-useless-buffers-regexp= which marks buffers matching the
-regexp as useless. The variable =spacemacs-useful-buffers-regexp= marks
-buffers matching the regexp as useful buffers. Both can be customized
-the same way.
+当你需要将有写buffers标记问无用时，你可以使用以下方法：你可以修改在=dotspacemacs/config=
+中修改=spacemacs-useless-buffers-regexp=变量的值。
+同样，
+当你需要将有写buffers标记问无用时，你可以使用以下方法：你可以修改在=dotspacemacs/config=
+中修改=spacemacs-useful-buffers-regexp=变量的值。
 
-Examples:
+例如：
 #+begin_src emacs-lisp
     ;; Only mark helm buffers as useless
     (setq spacemacs-useless-buffers-regexp '("\\*helm\.\+\\*"))
@@ -58,7 +54,8 @@ Examples:
 #+end_src
 
 ** Enable navigation by visual lines
-Add the following snippet to your =dostpacemacs/config= function:
+将如下代码放置在=~/.spacemacs=中的=dostpacemacs/config=函数中就可以使用visual lines
+移动行。
 
 #+begin_src emacs-lisp
     ;; Make evil-mode up/down operate in screen lines instead of logical lines
